# CUDA-notes

./: README.md
1.CUDA_by-example/: readme.md
1.CUDA_by-example/cuda_by_example-master/: CMakeLists.txt  README.md  README.txt  license.txt
1.CUDA_by-example/cuda_by_example-master/appendix_a/: CMakeLists.txt  dot.cu  hashtable_cpu.cu  hashtable_gpu.cu  lock.h
1.CUDA_by-example/cuda_by_example-master/chapter03/: CMakeLists.txt  enum_gpu.cu  hello_world.cu  set_gpu.cu  simple_device_call.cu  simple_kernel.cu  simple_kernel_params.cu
1.CUDA_by-example/cuda_by_example-master/chapter04/: CMakeLists.txt  add_loop_cpu.cu  add_loop_gpu.cu  add_loop_long.cu  julia_cpu.cu  julia_gpu.cu
1.CUDA_by-example/cuda_by_example-master/chapter05/: CMakeLists.txt  add_loop_blocks.cu  add_loop_long_blocks.cu  dot.cu  ripple.cu  shared_bitmap.cu
1.CUDA_by-example/cuda_by_example-master/chapter06/: CMakeLists.txt  ray.cu  ray_noconst.cu
1.CUDA_by-example/cuda_by_example-master/chapter07/: CMakeLists.txt  heat.cu  heat_2d.cu
1.CUDA_by-example/cuda_by_example-master/chapter08/: CMakeLists.txt  heat.cu  ripple.cu
1.CUDA_by-example/cuda_by_example-master/chapter09/: CMakeLists.txt  hist_cpu.cu  hist_gpu_gmem_atomics.cu  hist_gpu_shmem_atomics.cu
1.CUDA_by-example/cuda_by_example-master/chapter10/: CMakeLists.txt  basic_double_stream.cu  basic_double_stream_correct.cu  basic_single_stream.cu  copy_timed.cu
1.CUDA_by-example/cuda_by_example-master/common/: book.h  image.h
2.hands-gpu-accelerated-computer-vision-opencv-cuda/: readme.md
2.hands-gpu-accelerated-computer-vision-opencv-cuda/Hands-On-GPU-Accelerated-Computer-Vision-with-OpenCV-and-CUDA-master/: readme.md
3.Programming on Parallel Machines/: readme.md
CUDA_ICP/: readme.md
CUDA_NDT/: readme.md
