CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

CUDA_ADD_EXECUTABLE(ray_noconst ray_noconst.cu)
SET_PROPERTY(TARGET ray_noconst  PROPERTY FOLDER chapter06)
TARGET_LINK_LIBRARIES(ray_noconst ${OpenCV_LIBS})

CUDA_ADD_EXECUTABLE(ray ray.cu)
SET_PROPERTY(TARGET ray  PROPERTY FOLDER chapter06)
TARGET_LINK_LIBRARIES(ray ${OpenCV_LIBS})