CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

CUDA_ADD_EXECUTABLE(heat_2d heat_2d.cu)
SET_PROPERTY(TARGET heat_2d  PROPERTY FOLDER chapter07)
TARGET_LINK_LIBRARIES(heat_2d ${OpenCV_LIBS})

CUDA_ADD_EXECUTABLE(heat_7 heat.cu)
SET_PROPERTY(TARGET heat_7  PROPERTY FOLDER chapter07)
TARGET_LINK_LIBRARIES(heat_7 ${OpenCV_LIBS})